--- a/config.toml
+++ b/config.toml
@@ -23,6 +23,9 @@ weight = 1
     style = "tango"
     guessSyntax = true
 
+[params.mermaid]
+enable = true
+
 [outputs]
 section = ["HTML", "RSS"]
 
