--- a/config.toml
+++ b/config.toml
@@ -96,7 +96,7 @@ defaultContentLanguageInSubdir = true
     breadcrumb_disable = false
 
     # Set to true to disable the About link in the site footer
-    footer_about_disable = false
+    footer_about_disable = true
 
     # Set to false if you don't want to display a logo (/assets/icons/logo.svg) in the top navbar
     navbar_logo = true
