--- a/config.toml
+++ b/config.toml
@@ -39,6 +39,12 @@ defaultContentLanguageInSubdir = true
 [outputs]
   section = ["HTML", "RSS"]
 
+[[menu.main]]
+    name = "Wiki"
+    weight = 20
+    url = "https://github.com/one-scope/docs/wiki"
+    post = "<sup><i class=\"ps-1 fa-solid fa-up-right-from-square fa-xs\" aria-hidden=\"true\"></i></sup>"
+
 [params]
   copyright = "Kurusugawa Computer Inc."
   # privacy_policy = "https://policies.google.com/privacy"
