--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -6,19 +6,17 @@
 		"dockerfile": "Dockerfile",
 		"context": ".",
 		"args": {
-			"GO_VERSION": "1.20.4",
-			"HUGO_VERSION": "0.111.3",
-			"NODE_VERSION": "20.1.0"
+			"UBUNTU_VERSION": "22.04",
+			"APT_MIRROR": "http://jp.archive.ubuntu.com/ubuntu/",
+			"GO_VERSION": "1.20.6",
+			"NODE_VERSION": "18.16.1",
+			"HUGO_VERSION": "0.111.3"
 		}
 	},
 	"containerUser": "vscode",
 	"remoteUser": "vscode",
 	"updateRemoteUserUID": true,
 	"mounts": [],
-	"runArgs": [
-		"--init",
-		"--net=host"
-	],
 	"forwardPorts": [],
 	"otherPortsAttributes": {
 		"onAutoForward": "ignore" // --net=host なのでportForwardは必要ない
